--- a/omkring_friis.html
+++ b/omkring_friis.html
@@ -19,7 +19,7 @@
 
 <!-- Imellem disse to 'div'-tags kan du fylde indhold ind på siden. -->
 <div class="content">
-<p>Føtex har altid noget godt i køledisken.....</p>
+<p>Føtex har altid noget godt i køledisken, samt har MCD sommerchancen!!! så fuck salaten og smag på fars hamburger med ekstra løgpose.....</p>
 
 </div>
 
